- Added equality for log object - Added DuplicateCheckerLib.dll - Implemented duplicate check with DuplicateCheckerLib - Updated version 2.0.0

--- a/MusterAg.Monitoring.Client.csproj
+++ b/MusterAg.Monitoring.Client.csproj
@@ -11,6 +11,12 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Reference Include="DuplicateCheckerLib">
+        <HintPath>Lib\DuplicateCheckerLib.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
+    <ItemGroup>
       <Page Update="View\LogWindow.xaml">
         <Generator></Generator>
       </Page>
