--- a/MusterAg.Monitoring.Client.csproj
+++ b/MusterAg.Monitoring.Client.csproj
@@ -29,4 +29,8 @@
       </Compile>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Documentation\Images" />
+    </ItemGroup>
+
 </Project>
