--- a/MusterAg.Monitoring.Client.csproj
+++ b/MusterAg.Monitoring.Client.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="linq2db.MySql" Version="2.9.8" />
       <PackageReference Include="MySql.Data" Version="8.0.20" />
     </ItemGroup>
 
