- MySQL to SQL Server Migration - Kunden management (CRUD) - use EntityFramework - updated doc - added musterag.bak - added ERM

--- a/App.config
+++ b/App.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <connectionStrings>
-        <add name="connectionString" connectionString="Server=localhost;Database=musterag;Uid=root;Pwd=admin;"/>
+        <add name="connectionStringSqlServer" connectionString="Server=SURFACE;Database=musterag;User Id=admin;Password=root"/>
+        <add name="connectionStringMySql" connectionString="Server=localhost;Database=musterag;Uid=root;Pwd=admin;"/>
     </connectionStrings>
 </configuration>
