--- a/MusterAg.Monitoring.Client.csproj
+++ b/MusterAg.Monitoring.Client.csproj
@@ -4,10 +4,11 @@
         <OutputType>WinExe</OutputType>
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <UseWPF>true</UseWPF>
-        <Version>2.0.0</Version>
+        <Version>3.3.0</Version>
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Autofac" Version="5.2.0" />
       <PackageReference Include="EntityFramework" Version="6.4.4" />
       <PackageReference Include="linq2db.MySql" Version="2.9.8" />
       <PackageReference Include="linq2db.SqlServer" Version="2.9.8" />
@@ -20,6 +21,7 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="Moq" Version="4.14.5" />
       <PackageReference Include="MySql.Data" Version="8.0.20" />
       <PackageReference Include="NUnit" Version="3.12.0" />
     </ItemGroup>
